--- a/style.css
+++ b/style.css
@@ -1,48 +1,67 @@
-*{
+/*                     Global                     */
+
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 
-/*Encabezado*/
+/*                     Encabezado                     */
 
-.encabezado{
-  padding: 20px;
-  background-color: rgb(0, 0, 0);
+.encabezado {
+  padding: 20px 40px;
+  background-color: #1e1e1e;
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.encabezado ul li a{
-  color: #18a0aa;
+.encabezado ul {
+  display: flex;
+  list-style: none;
+}
+
+.encabezado ul li a {
+  color: #eaeaea;
   text-decoration: none;
-  padding: 0 20px;
-}
-
-.encabezado ul li a:hover{
-  color: #05585e;
-}
-
-.nombre{
-  font-family: "Great Vibes", cursive;
-  font-size: 40px;
-  margin: 0px;
-}
-
-.encabezado:hover{
-  background-color: #ffffff;
-  color: #000;
-}
-
-.navbar{
-  font-family: pompiere;
   font-size: 20px;
+  transition: color 0.3s ease-in-out;
 }
 
+.encabezado ul li a:hover {
+  color: #00adb5;
+  text-decoration: underline;
+}
 
+.nav-item{
+  padding: 20px 10px;
+}
 
-/*Footer*/
+.nombre {
+  font-size: 40px;
+  color: #eaeaea;
+  font-weight: bold;
+  transition: color 0.3s ease-in-out;
+  text-align: center;
+}
+
+.nombre:hover {
+  color: #00adb5;
+}
+
+.codigo-cafe {
+  color: #eaeaea;
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+.codigo-cafe:hover {
+  color: #00adb5;
+}
+
+/*                    Footer                    */
 
 .pie-pagina{
   color: white;
@@ -91,7 +110,7 @@
 
 .equipo{
   font-size: 20px;
-  font-family: pompiere;
+  font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -114,26 +133,31 @@ main{
 }
 
 .titulo{
-  font-family: "Great Vibes", cursive;
+  font-family: 'Montserrat', sans-serif;
   margin: 20px 0 0;
   text-align: center;
-  font-size: 60px;
+  font-size: 50px;
+  font-weight: bold;
+  color: #fff;
 }
 
 .description{
-  font-family: pompiere;
+  font-family: 'Montserrat', sans-serif;
   font-size: 30px;
   margin: 60px 40px;
+  color: #fff;
 }
 
 .tecnologia{
-  font-family: "Great Vibes", cursive;
+  font-family: 'Montserrat', sans-serif;
   font-size: 36px;
+  color: #fff;
 }
 
 .hobbits{
-  font-family: "Great Vibes", cursive;
+  font-family: 'Montserrat', sans-serif;
   font-size: 30px;
+  color: #CCCCCC;
 }
 
 /* proyectos */
@@ -143,7 +167,7 @@ main{
   gap: 1.75rem;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   flex-wrap: wrap;
-  background-image: url(img/fondo-proyecto.jpg);
+  background: #1e1e1e;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -151,7 +175,7 @@ main{
 }
 
 .fondo{
-  background-image: url(img/fondo-proyecto.jpg);
+  background: #1e1e1e;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -159,7 +183,7 @@ main{
 }
 
 .subtitulo-proyectos{
-  font-family: "Great Vibes", cursive;
+  font-family: 'Montserrat', sans-serif;
   font-size: 30px;
   padding: 30px;
 }
@@ -169,7 +193,7 @@ main{
   display: flex;
   text-align: center;
   justify-content: center;
-  font-family: "Great Vibes", cursive;
+  font-family: 'Montserrat', sans-serif;
   font-size: 40px;
   padding-top: 30px;
 }
@@ -193,11 +217,11 @@ main{
 .card-link{
   color: #000fe2;
   font-size: 19px;
-  font-family: pompiere;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .info-especifica{
-  background-color: #000000;
+  background-color: #ffffff;
 }
 
 /* form contacto */
@@ -209,7 +233,7 @@ main{
   background: #18a0aa;
   border: solid 3px #000;
   border-radius: 12px;
-  font-family: pompiere, cursive;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .fondo-footer{
@@ -224,7 +248,7 @@ main{
 
 .titulo-contacto{
   padding: 18px;
-  font-family: "Great Vibes", cursive;
+  font-family: 'Montserrat', sans-serif;
   font-size: 40px;
 }
 
@@ -242,20 +266,83 @@ main{
 
 .input-form{
   border-radius: 8px;
-  font-family: pompiere, cursive;
+  font-family: 'Montserrat', sans-serif;
   border: solid 2px #000;
 }
 /* Skills */
 
 .subtitulo{
-  font-family: "Great Vibes", cursive;
+  font-family: 'Montserrat', sans-serif;
   font-size: 30px;
 }
 
 
 .titulos-web{
-  font-family: "Great Vibes", cursive;
+  font-family: 'Montserrat', sans-serif;
   font-size: 40px;
   display: inline;
 }
 
+/* ------------------- Responsive Navbar ------------------- */
+
+.menu-toggle {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+  color: white;
+}
+
+/* Estilos generales */
+.encabezado {
+  padding: 20px 140px 20px 40px;
+  background-color: #1e1e1e;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+/* Ocultar menú en pantallas pequeñas */
+@media (max-width: 768px) {
+  .encabezado {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .nav-menu ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: #1e1e1e;
+    text-align: center;
+    padding: 10px 0;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+  }
+
+  .nav-menu ul li{
+    background-color: #1e1e1e;
+  }
+
+  .nav-menu ul.active {
+    display: flex;
+    background-color: #1e1e1e;
+  }
+
+  .nav{
+    padding: 0;
+    margin: 0;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+
+  .nombre {
+    font-size: 35px;
+    
+  }
+}
