--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 /*                     Encabezado                     */
 
 .encabezado {
@@ -26,7 +30,7 @@
 .encabezado ul li a {
   color: #eaeaea;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   transition: color 0.3s ease-in-out;
 }
 
@@ -40,7 +44,7 @@
 }
 
 .nombre {
-  font-size: 40px;
+  font-size: 28px;
   color: #eaeaea;
   font-weight: bold;
   transition: color 0.3s ease-in-out;
@@ -53,7 +57,7 @@
 
 .codigo-cafe {
   color: #eaeaea;
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 5px;
 }
 
@@ -65,7 +69,7 @@
 
 .pie-pagina{
   color: white;
-  background-color: rgb(0, 0, 0);
+  background-color: #1e1e1e;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -116,9 +120,37 @@
 
 .text-reservado{
   text-align: center;
-  color: rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255);
+  color: #fff;
+  background-color: #1e1e1e;
 }
+
+.icono-footer{
+  width: 300px;
+  height: 160px;
+}
+
+.pie-pagina {
+  background-color: #1e1e1e; /* Color oscuro */
+  color: white;
+}
+
+.enlace-footer {
+  transition: transform 0.3s ease-in-out;
+}
+
+.enlace-footer:hover {
+  transform: scale(1.2);
+  color: #f8d210; /* Color destacado */
+}
+
+.icono-footer {
+  filter: brightness(0) invert(1); /* Hace que el logo sea blanco si es necesario */
+}
+
+.text-reservado {
+  font-size: 0.9rem;
+}
+
 
 /* cuerpo inicio */
 
@@ -134,7 +166,6 @@ main{
 
 .titulo{
   font-family: 'Montserrat', sans-serif;
-  margin: 20px 0 0;
   text-align: center;
   font-size: 50px;
   font-weight: bold;
@@ -143,21 +174,22 @@ main{
 
 .description{
   font-family: 'Montserrat', sans-serif;
-  font-size: 30px;
+  font-size: 20px;
   margin: 60px 40px;
   color: #fff;
 }
 
 .tecnologia{
   font-family: 'Montserrat', sans-serif;
-  font-size: 36px;
+  font-size: 24px;
   color: #fff;
 }
 
 .hobbits{
   font-family: 'Montserrat', sans-serif;
-  font-size: 30px;
-  color: #CCCCCC;
+  font-size: 18px;
+  color: #fff;
+  margin: 60px 40px;
 }
 
 /* proyectos */
@@ -206,7 +238,7 @@ main{
 }
 
 .tarjeta:hover{
-  box-shadow: 5px 5px 20px rgba(0,0,0,.4);
+  box-shadow: 5px 5px 20px #00000066;
   transform: translateY(-3%);
 }
 
