--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 
 html, body {
   overflow-x: hidden;
+  background-color: #1e1e1e;
+  color: #ffffff;
 }
 
 /*                     Encabezado                     */
@@ -20,6 +22,8 @@ html, body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 28px;
 }
 
 .encabezado ul {
@@ -399,4 +403,23 @@ main{
     font-size: 35px;
     
   }
+}
+
+/* herramientas */
+
+.main-herramientas{
+  margin: 0;
+  padding: 40px;
+  color: #fff;
+  font-size: 20px;
+  background-color: #1e1e1e;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.main-herramientas h3{
+  padding: 40px;
+}
+
+.main-herramientas section{
+  padding: 10px;
 }
